# softwareblog

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile
migrations/: 001_initial.sql
src/: config.rs  error.rs  main.rs
src/application/: comment_service.rs  create_post.rs  errors.rs  get_post_by_slug.rs  mod.rs  post_service.rs
src/domain/: comment.rs  errors.rs  mod.rs  post.rs  tag.rs
src/infrastructure/postgres/: comment_repo.rs  mod.rs  post_repo.rs  tag_repo.rs
src/web/: errors.rs  middleware.rs  mod.rs  router.rs  state.rs
src/web/handlers/: admin.rs  auth.rs  comments.rs  mod.rs  posts.rs
static/css/: admin.css  main.css
templates/: base.html
templates/admin/: base.html  comments.html  dashboard.html  login.html  post_form.html
templates/comments/: _submitted.html
templates/posts/: _list.html  detail.html  list.html
